--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -192,7 +192,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -217,7 +217,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -242,7 +242,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -267,7 +267,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -292,7 +292,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -317,7 +317,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -342,7 +342,7 @@
             font-family: georgia;
             font-size: 16px;
             border: 0.2rem solid transparent;
-            color: #fff;
+            color: #d2d2d2;
             background: transparent;
           }
 
@@ -473,7 +473,7 @@
             height: 375px;
             background: #191919dc;
             padding: 25px;
-            color: #767676ef;
+            color: #7b7b7bef;
             font-size: 1.36rem;
             line-height: 36px;
             font-family: 'georgia';
@@ -522,7 +522,7 @@
             line-height: 16px;
             font-family: 'georgia';
             font-size: 9px;
-            color: #fefdfded;
+            color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
             border-radius: 0.15rem;
@@ -560,10 +560,10 @@
             background: transparent;
             width: 78%;
             height: 60px;
-            color: #f1f1f1;
+            color: #c0c0c0;
             padding: 5px;
-            font-family: 'Poppins';
-            font-size: 18.5px;
+            font-family: 'georgia';
+            font-size: 18px;
             line-height: 20px;
           }
 
@@ -612,7 +612,7 @@
             line-height: 16px;
             font-family: 'georgia';
             font-size: 9px;
-            color: #fefdfded;
+            color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
             border-radius: 0.15rem;
@@ -676,7 +676,7 @@
             line-height: 28px;
             font-family: 'georgia';
             font-size: 1.22rem;
-            color: #808080;
+            color: #8d8d8d;
             background: #9e0e40;
             border: 0.15rem solid #000;
             border-radius: 0.15rem;
@@ -713,11 +713,11 @@
           }
 
           .KonT{ 
-            color: #f1f1f1;
+            color: #d2d2d2;
           }
 
           .KonT:hover{
-            color: #fff;
+            color: #d2d2d2;
            
           }
 
@@ -751,7 +751,7 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #fefdfded;
+color: #d2d2d2;
 background: #9e0e40;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
@@ -760,7 +760,7 @@ font-size: 7px;
 line-height: 15px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
+box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
 
           }
 
@@ -814,7 +814,7 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #fefdfded;
+color: #d2d2d2;
 background: #9e0e40;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
@@ -823,7 +823,7 @@ font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
+box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
           }
 
 .Kontent2:hover{
@@ -844,7 +844,7 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #fefdfded;
+color: #d2d2d2;
 background: #9e0e40;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
@@ -853,7 +853,7 @@ font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
+box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
           }
 
           .Kontent3:hover{
@@ -1168,7 +1168,7 @@ cursor: pointer;
   padding: 9px;
   width: 100%;
   height: 300px;
-  color: #b7b6b6;
+  color: #bdbcbc;
   border-radius: 0.5rem;
   
 }
@@ -1365,7 +1365,7 @@ font-size: 20px;
   font-family: 'Poppins'; 
   line-height: 40px;
   margin-top: 4rem;
-  color: #aaa9a9;
+  color: #d2d2d2;
   width: 300px;
   background: transparent;
 }
@@ -1401,7 +1401,7 @@ font-size: 20px;
 
 .HPT{
   background: transparent;
-  color: #c9c8c8;
+  color: #d2d2d2;
   font-family: 'Poppins';
   font-size: 17.23px;
   width: auto;
