--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             padding: 25px;
             color: #7b7b7bef;
             font-size: 1.36rem;
-            line-height: 36px;
+            line-height: 34px;
             font-family: 'georgia';
             border: 0.12rem solid #4e4e4edc;
             border-radius: 1.7rem;
@@ -727,7 +727,7 @@
             justify-content: space-around;
             justify-items: center;
             padding: 0.3rem;
-            width: 86%;
+            width: 86.01%;
             height: 270px;
             background: #b8104b;
             border: 0.15rem solid #000;
@@ -1249,6 +1249,15 @@ cursor: pointer;
             border: 0.15rem solid #000;
           }
 
+          .HP-HP{
+            margin-left: 18rem; 
+            font-size: 0.9rem; 
+            background: #07070746; 
+            padding: 5px; 
+            color: #fff; 
+            height: 30px;
+          }
+
 .Horizontal-Wrapper{
 display: grid;
 grid-template-columns: 0.25fr 0.8fr 0.8fr;
@@ -1467,7 +1476,7 @@ font-size: 20px;
             justify-content: center;
             justify-items: center;
             padding: 10px;
-            width: 86.7%;
+            width: 86.48%;
             height: 480px;
             background: #9e0e40;
             border: 0.15rem solid #000;
@@ -1582,7 +1591,7 @@ font-size: 14px;
             font-size: 1.25rem;
             line-height: 30px;
             background: rgba(32, 32, 32, 0.966);
-            color: #fff;  
+            color: #e4e4e4d0;  
             text-align: center; 
             padding: 10px;
         }
@@ -1609,12 +1618,12 @@ font-size: 14px;
 .F2{
   display: grid;
   grid-template-columns: 1fr;
-  font-family: 'Poppins';
-  font-size: 1.96rem;
-  line-height: 34px;
-  text-align: justify;
+  font-family: 'georgia';
+  font-size: 1.8rem;
+  line-height: 31px;
+  text-align: left;
   padding: 20px;
-  color: #d4d4d4f3;
+  color: #abababeb;  
 }
 
 .footer2{
@@ -2311,7 +2320,7 @@ font-size: 14px;
               <div class="KonTenT0">  
                 <b style="text-align: center; font-size: 1.73rem;">Welcome on Tiki N'Yiki's Website !</b> 
               <br>
-              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay in including and defending disabled people in the society if needed. <b style="align-items: center;">Thank you for your time and feedback !
+              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay to help enhancing inclusion and defending the rights of disabled people in the society if needed. <b style="align-items: center;">Thank you for your time and feedback !
 
             </div>
 
@@ -2566,7 +2575,7 @@ font-size: 14px;
 
                     <div class="Vertical-Writing">
                       <div class="VerTiWA">
-                      <h1> What Is The Power of Flower?</h1>
+                      <h1> What Is The Power of Flower in Health Care ?</h1>
                       Since Antiquity people have explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their mental states. And may be that has led to the invention of nowadays medecinal drugs
                     </div>
                     <div class="VerTiWa">
@@ -2586,7 +2595,7 @@ font-size: 14px;
 
                 </div>
 
-                <div class="HP-HP" style="margin-left: 18rem; font-size: 0.9rem; background: #07070746; padding: 5px; color: #fff; height: 30px">
+                <div class="HP-HP">
                  What is about the healing power of flowers in phytotherapy?
                 </div>
             </div>
@@ -2679,7 +2688,7 @@ font-size: 14px;
               </div>
             
               <div class="F2">
-                Mushrooms are part of special plants that are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-being has managed to introduce mushrooms into his culinary culure (art) making some of them as food and then useful
+                Mushrooms are part of special plants that are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-beings have managed to introduce mushrooms into his culinary culture (art) making some of them as food and useful.
             </div>
           </div>
 
