--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             height: 787px;
             line-height: 16px;
             font-family: 'georgia';
-            font-size: 9px;
+            font-size: 12px;
             color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
@@ -2318,7 +2318,7 @@ font-size: 14px;
               <div class="KonTenT0">  
                 <b style="text-align: center; font-size: 1.73rem;">Welcome on Tiki N'Yiki's Website !</b> 
               <br>
-              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay to help enhancing inclusion and defending the rights of disabled people in the society if needed. <b style="align-items: center;">Thank you for your time and feedback !
+              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay to help enhancing inclusion and defending the rights of disabled people in the society if needed. <b style="align-items: center; color: rgb(2, 165, 247)">Thank you for your time and feedback !
 
             </div>
 
@@ -2342,8 +2342,13 @@ font-size: 14px;
             <div class="T-Area">
 
                <div class="PH">
+
+              <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-            </div>
+                <figcaption style="color: rgb(4, 159, 255);">Drumming</figcaption>
+                </figure>
+
+              </div>
 
             <div class="Drum">
               In addition to teaching activities there are also volunteering, sensibilisations about disability and vulnerability as well as drumming.
@@ -2360,12 +2365,13 @@ font-size: 14px;
             <a href="#">
             <div class="Pic">
               <div class="CIP">
+              <figure>
                 <img src="https://zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
+                <figcaption style="color: rgb(4, 159, 255);">Teaching on a blackboard</figcaption>
+                </figure>
             </div>
             <div class="PiK">
-              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by the ones and get included. But sometimes they are ridiculed, deviled, physically assaulted [Women with disabilities are more exposed to sexual harassments]. They are experiencing many kinds of discriminations and then get excluded by the others. It shouldn’t. The people never lack words and ways to cheer them or drive fear to them. 
-              When it comes to include them by helping them have opportunities, that same people have sometimes been absent, indifferent or/and reticent about pushing and promoting inclusion in the communities. 
-              </div>
+              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by the ones and get included. But sometimes they are ridiculed, deviled, physically assaulted [Women with disabilities are more exposed to sexual harassments]. They are experiencing many kinds of discriminations and then get excluded by the others. It shouldn't.</div>
               
         <div class="PiKe">
             Learn More...
@@ -2401,7 +2407,7 @@ font-size: 14px;
                   as well as physically"
                 <br>
                 </em>
-                <em style="color: #f1f1f1; font-family: 'Poppins'; font-size: 18px;">[Stephen Hawking, English Physicist, Cosmologist and Author] 
+                <em style="color: rgb(2, 165, 247); font-family: 'Poppins'; font-size: 18px;">[Stephen Hawking, English Physicist, Cosmologist and Author] 
                 </em>
               </div>
             </a>
@@ -2416,15 +2422,15 @@ font-size: 14px;
               <div class="Kontent2">
 
                 <div class="AB">
-                <b style="font-size: 19px; color: rgba(1, 150, 224, 0.963)">Etymology and Meaning</b>
+                <b style="font-size: 19px; color: rgb(2, 165, 247)">Etymology and Meaning</b>
                 <br>
                 Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso :
                 <br>
                 <br>
-              <b>1. Tiki</b> is litteraly meaning <b>LEANING UPON</b>
+              <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(4, 159, 255);">LEANING UPON</b>
                 <br>
                 <br>
-              <b> 2. N'Yiki</b> is meaning <b>GETTING UP</b>
+              <b> 2. N'Yiki</b> is meaning <b style="color: rgb(4, 159, 255);">GETTING UP</b>
               </div>
 
               <a href="#">
@@ -2438,7 +2444,7 @@ font-size: 14px;
               <div class="Kontent3">
 
                 <div class="AB">
-                <b style="font-size: 19px; color: rgba(1, 150, 224, 0.963)"> Why Tiki N'Yiki ?</b>
+                <b style="font-size: 19px; color: rgb(2, 165, 247)"> Why Tiki N'Yiki ?</b>
                 <br> 
                 Tiki N'Yiki is created to improve education and support efforts of disabled children in Burkina Faso. It is sounding as a slogan adressing the necessity and the possibility for everyone to lead his own achievement. 
                  Tiki N'Yiki stimulatively supports the idea that every disabled kid can have a better future if helped.
@@ -2455,7 +2461,7 @@ font-size: 14px;
               <div class="Kontent1">
 
                 <div class="ABC">
-                <b style="font-size: 19px; color: rgba(1, 150, 224, 0.963)">Region of Implementation</b>
+                <b style="font-size: 19px; color: rgb(2, 165, 247)">Region of Implementation</b>
                 <br>
                 Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids by many ways. 
                In the future Tiki N'Yiki would be extanding to neighboring countries like Benin, Ghana as well Ivory Coast depending on a base of a good security conditions in the region.
@@ -2577,7 +2583,7 @@ font-size: 14px;
                   <div class="H-P-H">
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
-                    <figcaption style="font-size: 16px; text-align: left; color: #d6d5d5d9;">
+                    <figcaption style="font-size: 16px; text-align: left; color: rgb(2, 165, 247);">
                       A Multicolored Flower Shining to Summer
                     </figcaption>
                 </figure>
@@ -2603,7 +2609,7 @@ font-size: 14px;
                 <div class="FST">
                   <figure>
                     <img src="https://cdn-icons-png.flaticon.com/512/4762/4762089.png" alt="Food Security">
-                        <figcaption style="color: #d6d5d5c1; font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
+                        <figcaption style="color: rgb(3, 171, 255); font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
                         </figcaption>
                     </figure>
 
@@ -2675,7 +2681,7 @@ font-size: 14px;
               <div class="footer1">
                 <figure>
                 <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
-                <figcaption style="font-size: 17px; text-align: left;">A mushroom in Ahuntsic</figcaption>
+                <figcaption style="font-size: 17px; text-align: left; color: rgb(3, 171, 255);">A mushroom in Ahuntsic</figcaption>
                 </figure>
               </div>
             
