--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             height: 787px;
             line-height: 16px;
             font-family: 'georgia';
-            font-size: 12px;
+            font-size: 16px;
             color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
@@ -610,7 +610,7 @@
             height: 787px;
             line-height: 17px;
             font-family: 'georgia';
-            font-size: 12px;
+            font-size: 16px;
             color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
@@ -622,8 +622,7 @@
            color: #595959;
            border: 0.12rem solid #000;
            transition: 0.2s ease-in;
-           border-radius: 0.51rem;
-          }
+                    }
 
           .PiKe{ 
             display: flex;
@@ -2367,7 +2366,7 @@ font-size: 14px;
               <div class="CIP">
               <figure>
                 <img src="https://zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
-                <figcaption style="color: rgb(4, 159, 255);">Teaching on a blackboard</figcaption>
+                <figcaption style="color: rgb(4, 159, 255);">Teaching</figcaption>
                 </figure>
             </div>
             <div class="PiK">
