--- a/index.html
+++ b/index.html
@@ -2365,7 +2365,7 @@ font-size: 14px;
             <div class="Pic">
               <div class="CIP">
               <figure>
-                <img src="https://zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
+                <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
                 <figcaption style="color: rgb(4, 159, 255);">Teaching</figcaption>
                 </figure>
             </div>
