--- a/index.html
+++ b/index.html
@@ -2679,8 +2679,8 @@ font-size: 14px;
 
               <div class="footer1">
                 <figure>
-                <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
-                <figcaption style="font-size: 17px; text-align: left; color: rgb(3, 171, 255);">A mushroom in Ahuntsic</figcaption>
+                <img src="https://www.zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
+                <figcaption style="font-size: 17px; text-align: left; color: rgb(7, 172, 255);">A mushroom in Ahuntsic</figcaption>
                 </figure>
               </div>
             
