--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #9e0e40;
+                 background: #b80e49;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.4rem solid rgb(15, 31, 207);
+                 border-bottom: 0.4rem solid rgb(14, 14, 194);
           }
           
           .myDiv{
@@ -481,8 +481,14 @@
             text-align: justify;
             margin-top: 2.4rem;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
+            cursor: pointer;
     }
 
+    .KonTenT0:hover{
+      background: #800b34;
+      color: #c6c6c6fd;
+      transition: 0.2s ease-in;
+    }
     .content1{
         display: grid;
         grid-template-rows: 1fr 1.5fr;
@@ -2317,7 +2323,7 @@ font-size: 14px;
               <div class="KonTenT0">  
                 <b style="text-align: center; font-size: 1.73rem;">Welcome on Tiki N'Yiki's Website !</b> 
               <br>
-              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay to help enhancing inclusion and defending the rights of disabled people in the society if needed. <b style="align-items: center; color: rgb(2, 165, 247)">Thank you for your time and feedback !
+              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them realize their DREAMS. One of the main leverages of dreaming is fundamentally to getting EDUCATED. It is not onely a great pleasure to have you here and wanting to learn more about realities of being, living as a disabled person but also and hopefully you'll become a relay and help to enhance inclusion and defend the rights of disabled people in the society if needed. <b style="align-items: center; color: rgb(2, 165, 247)">Thank you for your time and feedback !
 
             </div>
 
