--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
             font-family: 'georgia';
             background: #9e0e40;
             border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             text-align: justify;
             margin-top: 2.4rem;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -531,12 +532,13 @@
             color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
           .T-Area:hover{
-            background: #fff;
+           background: #fff;
            color: #000;
            border: 0.12rem solid #000;
            transition: 0.2s ease-in;
@@ -620,6 +622,7 @@
             color: #bdbcbc;
             background: #9e0e40;
             border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
