--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             line-height: 16px;
             font-family: 'georgia';
             font-size: 16px;
-            color: #bdbcbc;
+            color: #c3c3c3eb;
             background: #9e0e40;
             border: 0.15rem solid #000;
             border-radius: 0.15rem;
@@ -565,17 +565,17 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            width: 78%;
+            width: 100%;
             height: 60px;
-            color: #c0c0c0;
+            color: #c3c3c3eb;
             padding: 5px;
             font-family: 'georgia';
             font-size: 18px;
-            line-height: 20px;
+            line-height: 23px;
           }
 
           .Drum:hover{
-            color: #646464f6;
+            color: #5d5d5df6;
           }
 
           .PHCaption{
@@ -616,10 +616,10 @@
             margin-right: 4rem;
             width: 100%;
             height: 787px;
-            line-height: 17px;
+            line-height: 21px;
             font-family: 'georgia';
-            font-size: 16px;
-            color: #bdbcbc;
+            font-size: 17px;
+            color: #c3c3c3eb;
             background: #9e0e40;
             border: 0.15rem solid #000;
             border-radius: 0.15rem;
@@ -2379,7 +2379,7 @@ font-size: 14px;
                 </figure>
             </div>
             <div class="PiK">
-              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by the ones and get included. But sometimes they are ridiculed, deviled, physically assaulted [Women with disabilities are more exposed to sexual harassments]. They are experiencing many kinds of discriminations and then get excluded by the others. It shouldn't.</div>
+              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by the ones and are included. But sometimes they are ridiculed, deviled, physically assaulted. They are experiencing many kinds of discriminations and then get excluded by the others. It shouldn't.</div>
               
         <div class="PiKe">
             Learn More...
