--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #b80e49;
+                 background: #b60d48;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
