--- a/index.html
+++ b/index.html
@@ -379,12 +379,12 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 60px;
-      background: #fafafa;  
+      height: 55px;
+      background: #ddddddc0;    
       color: darkblue;
       font-family: 'Poppins';
       font-size: 1.5rem;
-      padding: 1rem;
+      padding: 0.5rem;
       font-weight: bold;
     }
     
@@ -496,7 +496,7 @@
         justify-content: space-between;
         justify-items: center;
             width: 100%;
-            height: 876px;
+            height: 844px;
             background: transparent;
             padding: 12px;
             color: #000;
@@ -513,6 +513,7 @@
             width: 86.25%;
             height: auto;
             padding: 5px;
+            margin-top: -1.25rem;
           }
 
           .T-Area{
@@ -525,7 +526,7 @@
             padding: 27px;
             margin-top: 3rem;
             width: 100%;
-            height: 787px;
+            height: 777px;
             line-height: 16px;
             font-family: 'georgia';
             font-size: 16px;
@@ -615,7 +616,7 @@
             margin-top: 3rem;
             margin-right: 4rem;
             width: 100%;
-            height: 787px;
+            height: 777px;
             line-height: 21px;
             font-family: 'georgia';
             font-size: 17px;
@@ -1870,7 +1871,7 @@ font-size: 14px;
    }
 
    .SPan{
-    background: #fff;
+    background: #ddddddc0;  
     display: flex; 
     width: 100%;
     height: 35px;
@@ -1881,7 +1882,7 @@ font-size: 14px;
 }
 
 .SPan:hover{
-    background:#000;
+    background:#242424f5;
     color: #ff0;
     border-top: 2px solid #f1f1f1;
 }
@@ -2379,7 +2380,7 @@ font-size: 14px;
                 </figure>
             </div>
             <div class="PiK">
-              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by the ones and are included. But sometimes they are ridiculed, deviled, physically assaulted. They are experiencing many kinds of discriminations and then get excluded by the others. It shouldn't.</div>
+              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by the ones and are included. But sometimes they are ridiculed, deviled, physically assaulted. They are experiencing many kinds of discriminations and then get excluded by the others.</div>
               
         <div class="PiKe">
             Learn More...
