--- a/index.html
+++ b/index.html
@@ -1360,10 +1360,10 @@ margin-top: 1rem;
 }
 
 .VerTiWa:hover{
-  background: #494949;
+  background: #404040;
 color: #fff;
-border-radius: 3rem;
-border: 0.5px solid #fff;
+border-radius: 1rem;
+border: 0.5px solid #e3e3e3;
 transition: 0.2s linear;
 font-size: 20px;
 }
@@ -1526,14 +1526,14 @@ font-size: 20px;
 
 .FooD{
   font-family: georgia;
-  font-size: 23px;
-  line-height: 26px;
-  color: #b1b1b1;
-  background: #ba104bd3;
+  font-size: 22px;
+  line-height: 27.45px;
+  color: #b8b7b7fe;
+  background: #c1114ed3;
   padding: 12px;
   border-radius: 0.5rem;
-  text-align: justify;
-  box-shadow: 0 0 0.2rem -0.25px #ffb0ccfc;;
+  text-align: left;
+  box-shadow: 0 0 0.2rem -0.25px #efa5bffc;;
 }
 
 .FooD:hover{
@@ -1550,19 +1550,19 @@ font-size: 20px;
   width: auto;
   height: auto;
   color: #2a2a2a;
-  font-size: 13.5px;
+  font-size: 15px;
 line-height: 14.25px;
 background: #f1f1f1;
 border: 0.5px solid rgba(2, 141, 211, 0.955);
-border-radius: 3rem;
+border-radius: 0.5rem;
 margin-top: 1rem;
 }
 
 .SF:hover{ 
-  background: #343434;
-color: #fff;
+  background: #3a3a3af9;
+color: #fafafa;
 border-radius: 3rem;
-border: 0.5px solid #fff;
+border: 0.15px solid #878787f9;
 transition: 0.2s linear;
 font-size: 14px;
 }
@@ -2354,7 +2354,7 @@ font-size: 14px;
 
               <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-                <figcaption style="color: rgb(4, 159, 255);">Drumming</figcaption>
+                <figcaption style="color: rgb(8, 181, 255); margin-top: 3px;">Drumming is of part of beloved and recreational activities for kids</figcaption>
                 </figure>
 
               </div>
@@ -2376,7 +2376,7 @@ font-size: 14px;
               <div class="CIP">
               <figure>
                 <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
-                <figcaption style="color: rgb(4, 159, 255);">Teaching</figcaption>
+                <figcaption style="color: rgb(8, 181, 255); margin-top: -1px;">Teaching Maths and Computer Science</figcaption>
                 </figure>
             </div>
             <div class="PiK">
@@ -2627,7 +2627,7 @@ font-size: 14px;
                 <div class="FSTS">
 
                   <div class="FooD">
-                  While in some regions around the world people have no more worries about Food Safety, in some other regions, it is not the same reality. Some people are struggling hard to get their daily food. In worse cases, some have died or are dying. But No Food Safety, No Sustainable Development. 
+                  While in some regions around the world people have no more to worry about Food Safety, in some other regions, it is not the same reality. Some people are struggling hard to get daily food. And in worse cases some have died or are dying. But No Food Safety, No Sustainable Development. 
                 </div>
 
                 <div class="SF">
