--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@ font-size: 14px;
   padding: 25px;
   justify-content: center;
   justify-items: center;
-  width: 90%;
+  width: 100%;
   height: 60px;
   color: #797979;
   font-size: 22px;
@@ -2591,14 +2591,23 @@ font-size: 14px;
                   <div class="HPh">
 
                     <div class="Vertical-Writing">
+
+                      <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                       <div class="VerTiWA">
                       <h1> What Is The Power of Flower in Health Care ?</h1>
                       Since Antiquity people have explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their mental states. And may be that has led to the invention of nowadays medecinal drugs
                     </div>
+                  </a>
+
+                  <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                     <div class="VerTiWa">
                       Learn More...
                     </div>
+                  </a>
+
                   </div>
+
+                  <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                   <div class="H-P-H">
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
@@ -2607,6 +2616,7 @@ font-size: 14px;
                     </figcaption>
                 </figure>
                   </div>
+                </a>
 
                 </div>
 
