--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-family: 'georgia';
         font-size: 0.76rem;
         color: rgb(219, 166, 32);
-        background: #282828;
+        background: #171717e6;
     }
 
     .Welcome{
@@ -527,9 +527,9 @@
             margin-top: 3rem;
             width: 100%;
             height: 777px;
-            line-height: 16px;
+            line-height: 21px;
             font-family: 'georgia';
-            font-size: 16px;
+            font-size: 17px;
             color: #c3c3c3eb;
             background: #9e0e40;
             border: 0.15rem solid #000;
