--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid rgb(14, 14, 194);
+                 border-bottom: 0.55rem solid rgb(7, 5, 99);
           }
           
           .myDiv{
@@ -1528,12 +1528,12 @@ font-size: 20px;
   font-family: georgia;
   font-size: 22px;
   line-height: 27.45px;
-  color: #b8b7b7fe;
-  background: #c1114ed3;
+  color: #bbbbbbfd;
+  background: #bf104ded;
   padding: 12px;
   border-radius: 0.5rem;
   text-align: left;
-  box-shadow: 0 0 0.2rem -0.25px #efa5bffc;;
+  box-shadow: 0 0 0.25rem 0.25px #e7658efc;;
 }
 
 .FooD:hover{
@@ -2364,7 +2364,7 @@ font-size: 14px;
 
               <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-                <figcaption style="color: rgb(8, 181, 255); margin-top: 3px;">Drumming is part of beloved and recreational activities for kids</figcaption>
+                <figcaption style="color: rgb(8, 181, 255); margin-top: 3px;">Drumming is one of beloved activities for kids</figcaption>
                 </figure>
 
               </div>
@@ -2545,7 +2545,7 @@ font-size: 14px;
                        </div>
               <a href="https://www.education.gov.bf/accueil" target="_blank">
                 <div class="DiV2">
-                <b style="font-size: 23.8px; font-family: 'georgia'; line-height: 28.3px">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
+                <b style="font-size: 23.8px; font-family: 'georgia'; line-height: 28.27px">The More The Rate of Education Get Higher, The More The Rate of Poverty Will Be Lower And The More the Index of Development Will Be Ascendant. That Highlights How Education Is Important and Stands as a Foundation for Nations to Implement a Sustainable Development.</b>
                 </div>
               </a>
               </div>
