--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #292929f7;
+        background: #292828fd;
     }
 
     .content0{
@@ -461,7 +461,7 @@
         justify-items: center;
             width: 100%;
             height: 465px;
-            background: #292929f7;
+            background: #292828fd;
     }
 
     .KonTenT0{
@@ -476,7 +476,7 @@
             font-size: 1.36rem;
             line-height: 34px;
             font-family: 'georgia';
-            background: #9e0e40;
+            background: #960e3e;
             border: 0.15rem solid #000;
             border-radius: 0.15rem;
             text-align: justify;
