--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #292828fd;
+        background: -webkit-linear-gradient(#383838fb, #eea1bbf7);
+        background: -moz-linear-gradient(#383838fb, #eea1bbf7);
     }
 
     .content0{
