--- a/index.html
+++ b/index.html
@@ -476,8 +476,7 @@
             font-size: 1.36rem;
             line-height: 34px;
             font-family: 'georgia';
-            background: #960e3e;
-            border: 0.15rem solid #000;
+            background: #9e0e40;
             border-radius: 0.15rem;
             text-align: justify;
             margin-top: 2.6rem;
@@ -532,10 +531,8 @@
             font-size: 17px;
             color: #c3c3c3eb;
             background: #9e0e40;
-            border: 0.15rem solid #000;
             border-radius: 0.15rem;
             cursor: pointer;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
           .T-Area:hover{
@@ -622,10 +619,8 @@
             font-size: 17px;
             color: #c3c3c3eb;
             background: #9e0e40;
-            border: 0.15rem solid #000;
             border-radius: 0.15rem;
             cursor: pointer;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
           .Pic:hover{
            background: #fff;
@@ -685,9 +680,7 @@
             font-size: 1.22rem;
             color: #8d8d8d;
             background: #9e0e40;
-            border: 0.15rem solid #000;
             border-radius: 0.15rem;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             margin-top: -7px;
           }
 
@@ -737,11 +730,9 @@
             width: 86.01%;
             height: 270px;
             background: #b8104b;
-            border: 0.15rem solid #000;
             margin-top: 0.7rem;
             border-radius: 0.15rem;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
-          }
+           }
 
           .Kontent:hover{
             border: 0.15rem solid #000;
@@ -879,14 +870,12 @@ box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
       width: 85.98%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
       border-radius: 0.15rem;
-      box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
       margin-top: 0.85rem;
           }
@@ -907,14 +896,12 @@ box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
       width: 84.00%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
       border-radius: 0.15rem;
-      box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
       margin-top: 0.8rem;
           }
@@ -953,10 +940,8 @@ box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
             height: 420px;
             padding: 20px;
             background: #9e0e40;
-            border: 0.15rem solid #000;
             margin-top: 7px;
             border-radius: 0.15rem;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
           .DiapoWrapper:hover{
@@ -1197,14 +1182,12 @@ cursor: pointer;
       width: 84.05%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
       border-radius: 0.15rem;
-      box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
       margin-top: 1.27rem;
 
@@ -1248,8 +1231,6 @@ cursor: pointer;
             background: #9e0e40;
             padding: 10px;
             margin-top: 1px;
-            border: 0.15rem solid #000;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.15rem;
           }
           .H-P:hover{
@@ -1326,12 +1307,10 @@ font-size: 14px;
   column-gap: 0.2rem;
   justify-content: space-between;
   justify-items: center;
-  width: 102.14%;
+  width: 102.12%;
   padding: 10px;
   background: #9e0e40;
   margin-top: 5.5rem;
-  border: 0.15rem solid #000;
-  box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
   border-radius: 0.15rem;
             cursor: pointer;
 }
@@ -1444,14 +1423,11 @@ font-size: 20px;
       width: 84.04%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border-radius: 0.15rem;
-      box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
       margin-top: 2.5rem;
     
@@ -1486,10 +1462,8 @@ font-size: 20px;
             width: 86.48%;
             height: 480px;
             background: #9e0e40;
-            border: 0.15rem solid #000;
             border-radius: 0.15rem;
             margin-top: 9px;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 .FoodSecurity:hover{
   border: 1px solid #000;
