--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
             justify-content: space-between;
             justify-items: center;
             width: 100%;
-            height: 614px;
+            height: 608px;
             background: transparent;
             padding: 1rem;
             color: #4b4b4b;
@@ -1456,6 +1456,7 @@ font-size: 20px;
             height: 480px;
             background: #9e0e40;
             border-radius: 0.15rem;
+            margin-top: -2.5px;
           }
 .FoodSecurity:hover{
   border: 1px solid #000;
