--- a/index.html
+++ b/index.html
@@ -1462,6 +1462,11 @@ font-size: 20px;
   border: 1px solid #000;
 }
 
+.FST{
+  border-right: 0.2rem solid #ac1047;
+  padding: 10px;
+} 
+
     .FST img{ 
       width: 450px;
       height: 400px;
@@ -1474,13 +1479,13 @@ font-size: 20px;
     }
 
     .FSTS{
-      width: 350px;
+      width: 470px;
       height: 400px;
       color: #787878fa;
       padding: 10px;
       font-family: georgia;
-      font-size: 1.25rem;
-      line-height: 36px;
+      font-size: 2rem;
+      line-height: 40px;
       cursor: pointer;
       margin-top: 10px;
       border-radius: 0.5rem;
@@ -1492,21 +1497,23 @@ font-size: 20px;
 }
 
 .FooD{
+  width: 448px;
+  height: 350px;
   font-family: georgia;
-  font-size: 22px;
-  line-height: 27.45px;
-  color: #bbbbbbfd;
+  font-size: 27px;
+  line-height: 29px;
+  color: #c4c4c4dc;
   background: #bf104ded;
-  padding: 12px;
-  border-radius: 0.5rem;
+  padding: 20px;
+  border-radius: 0.25rem;
   text-align: left;
   box-shadow: 0 0 0.25rem 0.25px #e7658efc;;
 }
 
 .FooD:hover{
-  color: #313131;
-  background: #f2f2f2;
-  transition: 0.2s ease-in;
+  color: #696969fa;
+  background: #efeeeef3;
+  transition: 0.24s ease-in;
 }
 
 .SF{
@@ -1520,13 +1527,13 @@ font-size: 20px;
   font-size: 15px;
 line-height: 14.25px;
 background: #f1f1f1;
-border: 0.5px solid rgba(2, 141, 211, 0.955);
+border: 0.5px solid rgba(2, 141, 211, 0.92);
 border-radius: 0.5rem;
 margin-top: 1rem;
 }
 
 .SF:hover{ 
-  background: #3a3a3af9;
+  background: #484848e1;
 color: #fafafa;
 border-radius: 3rem;
 border: 0.15px solid #878787f9;
@@ -2616,7 +2623,7 @@ font-size: 14px;
                 </div>
 
                 <div class="SF">
-                  learn More...
+                  Learn More...
               </div>
 
                 </div>
