--- a/index.html
+++ b/index.html
@@ -1502,17 +1502,17 @@ font-size: 20px;
   font-family: georgia;
   font-size: 27px;
   line-height: 29px;
-  color: #c4c4c4dc;
-  background: #bf104ded;
+  color: #cacacadc;
+  background: #b70f4aed;
   padding: 20px;
-  border-radius: 0.25rem;
+  border-radius: 0.2rem;
   text-align: left;
-  box-shadow: 0 0 0.25rem 0.25px #e7658efc;;
+  box-shadow: 0 0 0.25rem 0.25px #f36a96fc;
 }
 
 .FooD:hover{
   color: #696969fa;
-  background: #efeeeef3;
+  background: #edececf3;
   transition: 0.24s ease-in;
 }
 
@@ -1522,23 +1522,23 @@ font-size: 20px;
   align-items: center;
   padding: 10px;
   width: auto;
-  height: auto;
-  color: #2a2a2a;
-  font-size: 15px;
+  height: 48px;
+  color: #fff;
+  font-size: 19px;
 line-height: 14.25px;
-background: #f1f1f1;
-border: 0.5px solid rgba(2, 141, 211, 0.92);
+background: #920c3bf6;
+border: 0.15px solid #8f8f8ff9;
 border-radius: 0.5rem;
 margin-top: 1rem;
 }
 
 .SF:hover{ 
-  background: #484848e1;
-color: #fafafa;
+  background: #7f0b33f6;
+color: gold;
 border-radius: 3rem;
-border: 0.15px solid #878787f9;
+border: 0.15px solid #8f8f8ff9;
 transition: 0.2s linear;
-font-size: 14px;
+font-size: 18px;
 }
     
     ::-webkit-scrollbar{
