--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #02023e22;
+        background: #9e0e40df;
     }
 
     .content0{
@@ -726,10 +726,10 @@
             grid-template-columns: 365px 365px 365px;
             justify-content: space-around;
             justify-items: center;
-            padding: 0.3rem;
+            padding: 0.6rem;
             width: 86.01%;
             height: 275px;
-            background: #b8104b;
+            background: #9e0e40;
             margin-top: 0.15rem;
             border-radius: 0.15rem;
            }
