--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #b60d48;
+                 background: #c40f4e;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #9e0e40df;
+        background: #0303401a;
     }
 
     .content0{
@@ -480,6 +480,7 @@
             border-radius: 0.15rem;
             text-align: justify;
             margin-top: 2.6rem;
+            border-radius: 2rem;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             cursor: pointer;
     }
@@ -726,7 +727,7 @@
             grid-template-columns: 365px 365px 365px;
             justify-content: space-around;
             justify-items: center;
-            padding: 0.6rem;
+            padding: 0.3rem;
             width: 86.01%;
             height: 275px;
             background: #9e0e40;
