--- a/index.html
+++ b/index.html
@@ -750,8 +750,8 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #d2d2d2;
-background: #9e0e40;
+color: #d0d0d0ed;
+background: #b01048f1;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -813,8 +813,8 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #d2d2d2;
-background: #9e0e40;
+color: #d0d0d0ed;
+background: #b01048f1;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -843,8 +843,8 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #d2d2d2;
-background: #9e0e40;
+color: #d0d0d0ed;
+background: #b01048f1;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
 font-family: 'georgia';
