--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -661,7 +661,7 @@
             justify-content: space-between;
             justify-items: center;
             width: 100%;
-            height: 608px;
+            height: 617px;
             background: transparent;
             padding: 1rem;
             color: #4b4b4b;
@@ -727,9 +727,9 @@
             grid-template-columns: 365px 365px 365px;
             justify-content: space-around;
             justify-items: center;
-            padding: 0.3rem;
+            padding: 0.9rem;
             width: 86.01%;
-            height: 275px;
+            height: 285px;
             background: #9e0e40;
             margin-top: 0.15rem;
             border-radius: 0.15rem;
