--- a/index.html
+++ b/index.html
@@ -584,14 +584,14 @@
             align-items: center;
             width: 100%;
             height: 60px;
-            border-radius: 0.5rem;
-            color: rgba(2, 141, 211, 0.955);
+            background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
             padding: 5px;
             font-family: 'georgia';
             font-size: 1.35rem;
-            border: 0.12rem solid rgb(0, 187, 255);
-            background: #f6f6f6;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
+            
           }
 
           .PHCaption:hover{
@@ -638,13 +638,12 @@
             width: 100%;
             height: 60px;
             padding: 5px;
-            border-radius: 0.5rem;
-            color: rgba(2, 141, 211, 0.955);
+            background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
             font-family: 'georgia';
             font-size: 1.35rem;
-            border: 0.12rem solid rgb(0, 187, 255);
-            background: #f6f6f6;
-            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
           .PiKe:hover{
@@ -783,14 +782,14 @@ padding: 5px;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border: 0.12rem solid rgba(2, 156, 227, 0.906);
 width: 300px;
 height: 31px;
 padding: 6px;
-background: #fdfdfd;
-border-radius: 5rem;
+background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
 font-size: 1.05rem;
-color:rgba(1, 132, 197, 0.955);
 margin-top: -0.45rem;
           }
 
@@ -1103,9 +1102,10 @@ animation-delay: 5s;
 width: 100%;
 height: auto;
 padding: 10px;
-border: 1.5px solid rgba(0, 187, 255, 0.889);
-border-radius: 1.5rem;
-background-color: #fcfcfc;
+background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
 cursor: pointer;
 }
 
@@ -1122,9 +1122,10 @@ cursor: pointer;
 width: 100%;
 height: auto;
 padding: 10px;
-border: 1.5px solid rgba(0, 187, 255, 0.889);
-border-radius: 1.5rem;
-background-color: #fcfcfc;
+background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
 cursor: pointer;
 }
 .DD:hover{
@@ -1140,9 +1141,10 @@ cursor: pointer;
 width: 100%;
 height: auto;
 padding: 10px;
-border: 1.5px solid rgba(0, 187, 255, 0.889);
-border-radius: 1.5rem;
-background-color: #fcfcfc;
+background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
 cursor: pointer;
 }
 .DC:hover{
@@ -1268,12 +1270,12 @@ background: transparent;
   justify-items: center;
   width: auto;
   height: auto;
-  color: #f1f1f1;
   font-size: 13.5px;
 line-height: 14.25px;
-background: transparent;
-border: 0.5px solid rgba(2, 141, 211, 0.955);
+background: #7f0b33f6;
+color: gold;
 border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
 }
 .Doctor:hover{
 background: #fff;
@@ -1323,12 +1325,12 @@ font-size: 14px;
   justify-items: center;
   width: 100%;
   height: 60px;
-  color: #797979;
   font-size: 22px;
 line-height: 14.25px;
-background: #f1f1f1;
-border: 0.5px solid rgba(38, 161, 222, 0.955);
+background: #7f0b33f6;
+color: gold;
 border-radius: 3rem;
+border: 0.15px solid #8f8f8ff9;
 margin-top: 1rem;
 }
 
@@ -1524,17 +1526,17 @@ font-size: 20px;
   padding: 10px;
   width: auto;
   height: 48px;
-  color: #fff;
   font-size: 19px;
 line-height: 14.25px;
-background: #920c3bf6;
+background: #7f0b33f6;
+color: gold;
+border-radius: 3rem;
 border: 0.15px solid #8f8f8ff9;
-border-radius: 0.5rem;
 margin-top: 1rem;
 }
 
 .SF:hover{ 
-  background: #7f0b33f6;
+background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
 border: 0.15px solid #8f8f8ff9;
