--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             width: 86.25%;
             height: auto;
             padding: 5px;
-            margin-top: -1.25rem;
+            margin-top: -1rem;
           }
 
           .T-Area{
@@ -681,7 +681,7 @@ border: 0.15px solid #8f8f8ff9;
             color: #8d8d8d;
             background: #9e0e40;
             border-radius: 0.15rem;
-            margin-top: -19px;
+            margin-top: -17px;
           }
 
           .KontenT:hover{
@@ -730,7 +730,7 @@ border: 0.15px solid #8f8f8ff9;
             width: 86.01%;
             height: 285px;
             background: #9e0e40;
-            margin-top: 0.15rem;
+            margin-top: 1.2px;
             border-radius: 0.15rem;
            }
 
@@ -750,7 +750,7 @@ width: 90%;
 height: 245px;
 padding: 10px;
 color: #d0d0d0ed;
-background: #b01048f1;
+background: #a91045fb;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -813,7 +813,7 @@ width: 90%;
 height: 245px;
 padding: 10px;
 color: #d0d0d0ed;
-background: #b01048f1;
+background: #a91045fb;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -843,7 +843,7 @@ width: 90%;
 height: 245px;
 padding: 10px;
 color: #d0d0d0ed;
-background: #b01048f1;
+background: #a91045fb;
 border: 0.15rem solid #ff4686fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -877,7 +877,7 @@ box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
       font-weight: bold;
       border-radius: 0.15rem;
       cursor: pointer;
-      margin-top: 0.2rem;
+      margin-top: 1px;
           }
 
           .navbar2:hover{
@@ -2418,15 +2418,15 @@ font-size: 18px;
               <div class="Kontent2">
 
                 <div class="AB">
-                <b style="font-size: 20px; color: rgb(2, 165, 247)">Etymology and Meaning</b>
+                <b style="font-size: 20px; color: rgb(12, 166, 255)">Etymology and Meaning</b>
                 <br>
                 Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso :
                 <br>
                 <br>
-              <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(4, 159, 255);">LEANING UPON</b>
+              <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(12, 166, 255); font-size: 16px;">Leaning upon</b>
                 <br>
                 <br>
-              <b> 2. N'Yiki</b> is meaning <b style="color: rgb(4, 159, 255);">GETTING UP</b>
+              <b> 2. N'Yiki</b> is meaning <b style="color: rgb(12, 166, 255); font-size: 16px;">Getting up</b>
               </div>
 
               <a href="#">
@@ -2440,7 +2440,7 @@ font-size: 18px;
               <div class="Kontent3">
 
                 <div class="AB">
-                <b style="font-size: 20px; color: rgb(2, 165, 247)"> Why Tiki N'Yiki ?</b>
+                <b style="font-size: 20px; color: rgb(12, 166, 255)"> Why Tiki N'Yiki ?</b>
                 <br> 
                 Tiki N'Yiki is created to improve education and support efforts of disabled children in Burkina Faso. It is sounding as a slogan adressing the necessity and the possibility for everyone to lead his own achievement. 
                  Tiki N'Yiki stimulatively supports the idea that every disabled kid can have a better future if helped.
@@ -2457,7 +2457,7 @@ font-size: 18px;
               <div class="Kontent1">
 
                 <div class="ABC">
-                <b style="font-size: 20px; color: rgb(2, 165, 247)">Region of Implementation</b>
+                <b style="font-size: 20px; color: rgb(12, 166, 255)">Region of Implementation</b>
                 <br>
                 Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids by many ways. 
                In the future Tiki N'Yiki would be extanding to neighboring countries like Benin, Ghana as well Ivory Coast depending on a base of a good security conditions in the region.
