--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@ cursor: pointer;
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      width: 84.03%;
+      width: 83.97%;
       height: 100px;
       background: #9e0e40;
       color: #e9e9e9a7;
@@ -1416,7 +1416,7 @@ font-size: 20px;
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      width: 84.03%;
+      width: 83.97%;
       height: 100px;
       background: #9e0e40;
       color: #e9e9e9a7;
@@ -2420,7 +2420,7 @@ font-size: 18px;
                 <div class="AB">
                 <b style="font-size: 20px; color: rgb(12, 166, 255)">Etymology and Meaning</b>
                 <br>
-                Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso :
+                Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso</a> :
                 <br>
                 <br>
               <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(12, 166, 255); font-size: 16px;">Leaning upon</b>
