--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ border: 0.15px solid #8f8f8ff9;
             height: 285px;
             background: #9e0e40;
             margin-top: 1.2px;
-            border-radius: 0.15rem;
+            border-radius: 0.56rem;
            }
 
           .Kontent:hover{
@@ -749,16 +749,16 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #d0d0d0ed;
-background: #a91045fb;
-border: 0.15rem solid #ff4686fb;
+color: #c9c8c8ed;
+background: transparent;
+border: 0.15rem solid #ff3e82fb;
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.3rem;
-box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
+box-shadow: 0 0 0.4rem 0.5px rgba(195, 195, 195, 0.639);
 
           }
 
@@ -812,16 +812,16 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #d0d0d0ed;
-background: #a91045fb;
-border: 0.15rem solid #ff4686fb;
+color: #c9c8c8ed;
+background: transparent;
+border: 0.15rem solid #ff3e82fb;
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
+box-shadow: 0 0 0.4rem 0.5px rgba(195, 195, 195, 0.639);
           }
 
 .Kontent2:hover{
@@ -842,16 +842,16 @@ justify-items: center;
 width: 90%;
 height: 245px;
 padding: 10px;
-color: #d0d0d0ed;
-background: #a91045fb;
-border: 0.15rem solid #ff4686fb;
+color: #c9c8c8ed;
+background: transparent;
+border: 0.15rem solid #ff3e82fb;
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.45rem 0.5px rgba(207, 207, 207, 0.67);
+box-shadow: 0 0 0.4rem 0.5px rgba(195, 195, 195, 0.639);
           }
 
           .Kontent3:hover{
