--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ width: 90%;
 height: 245px;
 padding: 10px;
 color: #c9c8c8ed;
-background: transparent;
+background: #a50f44cd;
 border: 0.15rem solid #ff3e82fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -783,14 +783,14 @@ padding: 5px;
             justify-content: center;
             align-items: center;
 width: 300px;
-height: 31px;
+height: 37px;
 padding: 6px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
 border: 0.15px solid #8f8f8ff9;
 font-size: 1.05rem;
-margin-top: -0.45rem;
+margin-top: -0.5rem;
           }
 
           .BA:hover{
@@ -813,7 +813,7 @@ width: 90%;
 height: 245px;
 padding: 10px;
 color: #c9c8c8ed;
-background: transparent;
+background: #a50f44cd;
 border: 0.15rem solid #ff3e82fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -843,7 +843,7 @@ width: 90%;
 height: 245px;
 padding: 10px;
 color: #c9c8c8ed;
-background: transparent;
+background: #a50f44cd;
 border: 0.15rem solid #ff3e82fb;
 border-radius: 1rem;
 font-family: 'georgia';
@@ -2420,6 +2420,7 @@ font-size: 18px;
                 <div class="AB">
                 <b style="font-size: 20px; color: rgb(12, 166, 255)">Etymology and Meaning</b>
                 <br>
+                <br>
                 Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso</a> :
                 <br>
                 <br>
@@ -2442,6 +2443,7 @@ font-size: 18px;
                 <div class="AB">
                 <b style="font-size: 20px; color: rgb(12, 166, 255)"> Why Tiki N'Yiki ?</b>
                 <br> 
+                <br>
                 Tiki N'Yiki is created to improve education and support efforts of disabled children in Burkina Faso. It is sounding as a slogan adressing the necessity and the possibility for everyone to lead his own achievement. 
                  Tiki N'Yiki stimulatively supports the idea that every disabled kid can have a better future if helped.
               </div>
@@ -2459,12 +2461,13 @@ font-size: 18px;
                 <div class="ABC">
                 <b style="font-size: 20px; color: rgb(12, 166, 255)">Region of Implementation</b>
                 <br>
+                <br>
                 Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids by many ways. 
                In the future Tiki N'Yiki would be extanding to neighboring countries like Benin, Ghana as well Ivory Coast depending on a base of a good security conditions in the region.
               </div>
 
               <a href="#">
-                <div class="BA" style="margin-top: 20px;">
+                <div class="BA" style="margin-top: 11.85px;">
                 Learn More...
               </div>
             </a>
