--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #c40f4e;
+                 background: #8b0c38f2;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid rgb(7, 7, 108);
+                 border-bottom: 0.55rem solid rgb(7, 7, 98);
           }
           
           .myDiv{
