--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ display: grid;
 grid-template-rows: 1fr 0.3fr;
 justify-content: center;
 justify-items: center;
-width: 90%;
+width: 88%;
 height: 245px;
 padding: 10px;
 color: #c9c8c8ed;
@@ -809,7 +809,7 @@ grid-template-rows: 1.6fr 0.4fr;
 row-gap: 0.5rem;
 justify-content: space-around;
 justify-items: center;
-width: 90%;
+width: 88%;
 height: 245px;
 padding: 10px;
 color: #c9c8c8ed;
@@ -839,7 +839,7 @@ grid-template-rows: 1.6fr 0.4fr;
 row-gap: 0.5rem;
 justify-content: space-around;
 justify-items: center;
-width: 90%;
+width: 88%;
 height: 245px;
 padding: 10px;
 color: #c9c8c8ed;
@@ -2462,12 +2462,12 @@ font-size: 18px;
                 <b style="font-size: 20px; color: rgb(12, 166, 255)">Region of Implementation</b>
                 <br>
                 <br>
-                Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids by many ways. 
-               In the future Tiki N'Yiki would be extanding to neighboring countries like Benin, Ghana as well Ivory Coast depending on a base of a good security conditions in the region.
+                Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids. 
+               In the future Tiki N'Yiki would be extanding to neighboring countries like Benin, as well Ivory Coast depending with good security conditions in the region.
               </div>
 
               <a href="#">
-                <div class="BA" style="margin-top: 11.85px;">
+                <div class="BA" style="margin-top: 12px;">
                 Learn More...
               </div>
             </a>
