--- a/index.html
+++ b/index.html
@@ -472,11 +472,11 @@
             width: 84.2%;
             height: 380px;
             padding: 25px;
-            color: #adadadfa;
+            color: #b8b6b6fa;
             font-size: 1.36rem;
             line-height: 34px;
             font-family: 'georgia';
-            background: #9e0e40f7;
+            background: #9e0e40fe;
             border-radius: 0.15rem;
             text-align: justify;
             margin-top: 2.6rem;
@@ -749,16 +749,15 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #c9c8c8ed;
-background: #a50f44cd;
-border: 0.15rem solid #ff3e82fb;
+color: #c5c5c5ed;
+background: #bd114ddc;
+box-shadow: 0 0 0.25rem -0.25px rgba(192, 226, 224, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.3rem;
-box-shadow: 0 0 0.4rem 0.5px rgba(195, 195, 195, 0.639);
 
           }
 
@@ -788,7 +787,7 @@ padding: 6px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border: 0.15px solid #a0a0a0fe;
 font-size: 1.05rem;
 margin-top: -0.5rem;
           }
@@ -812,16 +811,15 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #c9c8c8ed;
-background: #a50f44cd;
-border: 0.15rem solid #ff3e82fb;
+color: #c5c5c5ed;
+background: #bd114ddc;
+box-shadow: 0 0 0.25rem -0.25px rgba(192, 226, 224, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.4rem 0.5px rgba(195, 195, 195, 0.639);
           }
 
 .Kontent2:hover{
@@ -842,16 +840,15 @@ justify-items: center;
 width: 88%;
 height: 245px;
 padding: 10px;
-color: #c9c8c8ed;
-background: #a50f44cd;
-border: 0.15rem solid #ff3e82fb;
+color: #c5c5c5ed;
+background: #bd114ddc;
+box-shadow: 0 0 0.25rem -0.25px rgba(192, 226, 224, 0.883);
 border-radius: 1rem;
 font-family: 'georgia';
 font-size: 13px;
 line-height: 17.5px;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.4rem 0.5px rgba(195, 195, 195, 0.639);
           }
 
           .Kontent3:hover{
@@ -1078,11 +1075,11 @@ animation-delay: 5s;
   width: 100%;
   height: 385px;
   padding: 10px;
-  box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
   border-radius: 0.5rem;
   transition: 0.2s ease-in;
-  color: #aaa9a9;
+  color: #b0afaf;
   background: #bd114ddc;
+  box-shadow: 0 0 0.25rem -0.25px rgba(191, 224, 222, 0.692);
   cursor: pointer;
 }
 
@@ -1105,7 +1102,7 @@ padding: 10px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border: 0.15px solid #a0a0a0fe;
 cursor: pointer;
 }
 
@@ -1125,7 +1122,7 @@ padding: 10px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border: 0.15px solid #a0a0a0fe;
 cursor: pointer;
 }
 .DD:hover{
@@ -1144,7 +1141,7 @@ padding: 10px;
 background: #7f0b33f6;
 color: gold;
 border-radius: 3rem;
-border: 0.15px solid #8f8f8ff9;
+border: 0.15px solid #a0a0a0fe;
 cursor: pointer;
 }
 .DC:hover{
@@ -1163,7 +1160,7 @@ cursor: pointer;
   padding: 9px;
   width: 100%;
   height: 300px;
-  color: #bdbcbc;
+  color: #c6c6c6c7;
   border-radius: 0.5rem;
   
 }
@@ -1506,11 +1503,11 @@ font-size: 20px;
   font-size: 27px;
   line-height: 29px;
   color: #cacacadc;
-  background: #b70f4aed;
   padding: 20px;
   border-radius: 0.2rem;
   text-align: left;
-  box-shadow: 0 0 0.25rem 0.25px #f36a96fc;
+  background: #bd114ddc;
+  box-shadow: 0 0 0.25rem -0.25px rgba(191, 224, 222, 0.692);
 }
 
 .FooD:hover{
@@ -2616,7 +2613,7 @@ font-size: 18px;
                 <div class="FST">
                   <figure>
                     <img src="https://cdn-icons-png.flaticon.com/512/4762/4762089.png" alt="Food Security">
-                        <figcaption style="color: rgb(3, 171, 255); font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
+                        <figcaption style="color: rgb(3, 213, 255); font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
                         </figcaption>
                     </figure>
 
