--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv:hover{
-            border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
       
@@ -186,13 +186,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv1:hover{
-      border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
           }
@@ -208,13 +208,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv2:hover{
-            border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
           }
@@ -230,13 +230,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv3:hover{
-            border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
           }
@@ -252,13 +252,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv4:hover{
-            border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
           }
@@ -274,13 +274,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv5:hover{
-            border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
           }
@@ -296,13 +296,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv4:hover{
-      border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
           }
@@ -318,13 +318,13 @@
             cursor: pointer;
             font-family: georgia;
             font-size: 16px;
-            border: 0.2rem solid transparent;
+            border: 0.4rem solid transparent;
             color: #c2c2c2;
             background: transparent;
           }
 
           .myDiv6:hover{
-            border-bottom: 0.2rem solid #fff;
+            border-bottom: 0.4rem solid #fff;
       color: #fff;
       transition: 0.2s ease-in;
       
@@ -358,6 +358,7 @@
       height: 55px;
       background: #d5d5d5c0;  
       border-bottom: 0.2rem solid #9e0e408f;  
+      border-top: 0.1rem solid #888888e7;  
       color: darkblue;
       font-family: 'Poppins';
       font-size: 1.5rem;
@@ -1820,7 +1821,7 @@ font-size: 18px;
     padding: 2px;
     border: 1.5px solid #8b103b;
     background: rgb(251, 9, 9);
-    margin-top: -13px;
+    margin-top: -14px;
     margin-left: 4rem;
     cursor: pointer;
    }
