--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       color: #d4d4d4f7;
       border-radius: 0.3rem;
       margin-top: 0.65rem;
+      margin-left: 0.5rem;
     }
 
     .datime:hover{
