--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-family: 'georgia';
         font-size: 0.76rem;
         color: rgb(219, 166, 32);
-        background: #9e0e40f2;
+        background: #9e0e40;
     }
 
     .Welcome{
@@ -143,7 +143,7 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #040404;
+                 background: #01063a;
                  width: 100%;
                  height: 70px;
                  object-fit: cover;
