--- a/index.html
+++ b/index.html
@@ -143,14 +143,13 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: #000005;
+                 background: #060d62fe;
                  width: 100%;
-                 height: 75px;
+                 height: 71.45px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.55rem solid rgb(14, 139, 193);
           }
           
           .myDiv{
@@ -1809,8 +1808,7 @@ font-size: 18px;
     font-family: 'arial narrow';
     font-size: 13px;
     padding: 2px;
-    border: 1.5px solid #8b103b;
-    background: rgb(251, 9, 9);
+    background: orangered;
     margin-top: -10px;
     margin-left: 4rem;
     cursor: pointer;
