--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,11 @@ font-size: 20px;
 }
 
 .FST{
-  width: 490px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
   height: auto;
   border-right: 0.15rem solid #be124e;
   padding: 2px;
